# streamblocks

./: .commit-check.yml  .editorconfig  .env.example  .examples.yaml  .gitattributes  .gitignore  .pytest.ini  AGENTS.md  API_CHANGES.md  CHANGELOG.md  CLAUDE.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  README_GEMINI_EXAMPLES.md  ROADMAP.md  STREAMBLOCK_PROTOTYPE.md  SUPPORT.md  cliff.toml  index.html  lefthook.yml  mkdocs.yml  pyproject.toml  renovate.json  versions.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  workflow-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: bump.yml  dependency-review.yml  docs.yaml  pull_request.yaml  release.yml  semantic-release.yml  stale.yml  test.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  BLOCK_DEFINITION.md  FSM_DESIGN.md  Plan-grok.md  adapters.md  advanced.md  ag-ui-integration.md  basics.md  blocks.md  community.md  contributing.md  errors.md  events.md  faq.md  getting_started.md  index.md  installation.md  patterns.md  performance.md  processing.md  syntaxes.md  troubleshooting.md  validation.md
docs/.hooks/: __init__.py  main.py  snippets.py  utils.py
docs/architecture/: adapters.md  extensions.md  index.md  state-machine.md
docs/concepts/: adapters.md  blocks-and-registry.md  events.md  index.md  syntaxes.md
docs/examples/: adapters.md  basic.md  basics.md  blocks.md  index.md  integrations.md  providers.md  quickstart.md  setup.md  syntaxes.md
docs/getting-started/: first-custom-block.md  index.md  installation.md  quickstart.md
docs/guides/: agui.md  define-custom-blocks.md  error-handling.md  generate-prompts.md  index.md  logging.md  performance.md  providers.md  pydantic-ai.md  validation.md
docs/integrations/: agui.md  index.md  pydantic_ai.md
docs/javascripts/: mermaid.js  tablesort.js
docs/reference/: adapters.md  blocks.md  core.md  events.md  extensions.md  index.md  integrations.md  parsing-and-validation.md  processors.md  prompts.md  registry-and-models.md  syntaxes.md
docs/stylesheets/: extra.css
examples/: README.md  basic_usage.py  delimiter_frontmatter_example.py  error_handling_example.py  gemini_architect_example.py  gemini_simple_demo.py  interactive_blocks_example.py  interactive_ui_demo.py  live_feedback_example.py  logging_integration.py  markdown_frontmatter_example.py  minimal_api_example.py  mixed_syntaxes_example.py  parsing_decorators_example.py  patch_content_example.py  pydantic_ai_integration.py  pyproject.toml  run_examples.py  single_syntax_example.py  structured_output_example.py
examples/00_basics/: 01_basic_usage.py  03_error_handling.py
examples/00_quickstart/: 01_hello_world.py  02_basic_stream.py  03_custom_block.py
examples/01_basics/: 01_basic_usage.py  03_error_handling.py  04_structured_output.py  05_metadata_validators.py  06_validator_composition.py
examples/01_syntaxes/: 01_markdown_frontmatter.py  03_parsing_decorators.py
examples/02_adapters/: 03_openai_explicit_adapter.py  08_configuration_flags.py  10_callable_adapter.py  11_attribute_adapter_generic.py  14_section_delta_events.py  15_section_end_events.py
examples/02_syntaxes/: 02_delimiter_frontmatter.py  04_custom_syntax.py
examples/03_adapters/: 01_identity_adapter_plain_text.py  02_gemini_auto_detect.py  03_openai_explicit_adapter.py  04_anthropic_adapter.py  05_mixed_event_stream.py  06_text_delta_streaming.py  07_block_opened_event.py  08_configuration_flags.py  09_custom_adapter.py  10_callable_adapter.py  11_attribute_adapter_generic.py  12_disable_original_events.py  13_manual_chunk_processing.py  15_section_end_events.py  16_bidirectional_protocol.py  17_custom_output_adapter.py
examples/04_blocks/: 02_patch_block.py  03_toolcall_block.py  04_memory_block.py  05_visualization_block.py
examples/05_integrations/: 01_pydantic_ai_integration.py
examples/05_logging/: 01_stdlib_logging.py
examples/06_integrations/: 02_agui_integration.py
examples/06_providers/: 01_gemini_simple_demo.py  02_gemini_architect.py
examples/07_providers/: 01_gemini_simple_demo.py  02_gemini_architect.py
examples/07_ui/: 01_interactive_blocks.py
examples/08_ui/: 01_interactive_blocks.py
examples/09_advanced/: 01_performance_tuning.py
examples/adapters/: 01_identity_adapter_plain_text.py  02_gemini_auto_detect.py  03_openai_explicit_adapter.py  04_anthropic_adapter.py  05_mixed_event_stream.py  06_text_delta_streaming.py  07_block_opened_event.py  08_configuration_flags.py  09_custom_adapter.py  10_callable_adapter.py  11_attribute_adapter_generic.py  12_disable_original_events.py  13_manual_chunk_processing.py  README.md
examples/agent/: 01_basic_agent.py  02_sequential_agent.py  03_batched_speculative.py  04_speculative_continuation_demo.py  04_thinking.py  README.md  __init__.py  agent.py  batched_stream.py  blocks.py  context.py  display.py  events.py  executor.py  prompts.py  sequential_stream.py  speculative_stream.py  thinking_stream.py  tools.py
examples/blocks/: README.md  __init__.py
examples/helpers/: __init__.py
examples/integrations/: pydantic_ai_integration.py
sandbox/: __init__.py  blocks_markdown.py
tests/: __init__.py  conftest.py  test_basic_integration.py  test_block_examples.py  test_block_state_machine.py  test_config.py  test_docs_snippets.py  test_edge_cases.py  test_examples.py  test_interactive_blocks.py  test_minimal_api.py  test_models.py  test_parsing_decorators.py  test_prompts_builder.py  test_prompts_inspector.py  test_prompts_manager.py  test_section_delta_events.py  test_section_end_events.py  test_syntax_serialize.py
tools/: release.py
v0.2/: 404.html  index.html
v0.3/: objects.inv
v0.4/: 404.html  index.html  objects.inv
workflow/: CONSOLIDATION_PLAN.md  FUTURE_IMPROVEMENTS.md  PLAN.md  PRD.md  TASKS.md  TRACK_0.md  TRACK_1.md  TRACK_10.md  TRACK_2.md  TRACK_3.md  TRACK_4.md  TRACK_5.md  TRACK_6.md  TRACK_7.md  TRACK_8.md  TRACK_9.md  USER_REQUEST.md
(+333 files in other folders)
