[project]
name = "hother-change-me"
dynamic = ["version"]
description = "Template for python projects"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
]


[project.urls]
"Homepage" = "https://github.com/hotherio/CHANGE-ME"
"Bug Tracker" = "https://github.com/hotherio/CHANGE-ME/issues"
"Source" = "https://github.com/hotherio/CHANGE-ME"
"Documentation" = "https://hotherio.github.io/CHANGE-ME/latest/"

[build-system]
requires = [
    "hatchling",
    "hatch-vcs"
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/hother"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
    "cliff.toml",
    "lefthook.yml",
    "pyproject.toml",
]


[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pretty_errors==1.2.25",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "lefthook==1.13.0",
    "pyyaml==6.0.2",
    "git-cliff==2.7.0",
    "detect-secrets==1.5.0"
]
doc = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.49",
    "mkdocs-material-extensions==1.3.1",
    "mike==2.1.3",
    "mkdocstrings[python]==0.27.0"
]

[tool.uv.sources]
torch = { index = "hother" }

[[tool.uv.index]]
name = "hother"
url = "https://hotherio.github.io/pypi-registry/"
publish-url = "https://hotherio.github.io/pypi-registry/"

[tool.ruff]
line-length = 128
target-version = "py312"

# Enable multiple rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
]

# Ignore specific rules
ignore = [
    "PLR0913",  # Too many arguments
]

# Configure import sorting (replaces isort)
[tool.ruff.isort]
known-first-party = ["hother"]

# Format settings
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=hother --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/hother"]
omit = ["*/tests/*", "*/__init__.py", "*/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.default.scripts]
release = "python tools/release.py {args}"


