[project]
name = "streamblocks"
version = "0.1.0"
description = "Real-time extraction and processing of structured blocks from text streams"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.38.0",
    "pydantic-ai>=1.0.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "textual>=6.1.0",
]

[project.urls]
"Homepage" = "https://github.com/streamblocks/streamblocks"
"Bug Tracker" = "https://github.com/streamblocks/streamblocks/issues"
"Source" = "https://github.com/streamblocks/streamblocks"
"Documentation" = "https://streamblocks.github.io/streamblocks/latest/"

# Corrected build system to use UV build backend
[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

# UV build backend configuration with hother namespace
[tool.uv.build-backend]
module-name = "hother.streamblocks"
module-root = "src"

# File inclusion configuration
source-include = [
    "src/**",
    "tests/**",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
    "cliff.toml",
    "lefthook.yml",
    "pyproject.toml",
]

# File exclusion configuration
source-exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/.pytest_cache",
    "**/.coverage",
    "**/htmlcov",
    "**/.mypy_cache",
    "**/.ruff_cache",
]

# Development dependencies
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
    "ruff>=0.8",
    "basedpyright>=1.31.4",
    "pre-commit>=4.0",
    "detect-secrets>=1.5",
    "pretty_errors>=1.2",
    "types-pyyaml>=6.0.12.20250915",
    # Documentation dependencies
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-material-extensions>=1.3",
    "mike>=2.1",
    "mkdocstrings[python]>=0.27",
]

# Ruff Configuration - Comprehensive and Strict
[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Enable comprehensive rule set for strict code quality
select = [
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-bandit (security)
    "S",
    # flake8-annotations (type annotations)
    "ANN",
    # flake8-async
    "ASYNC",
    # flake8-comprehensions
    "C4",
    # flake8-datetimez
    "DTZ",
    # flake8-errmsg
    "EM",
    # flake8-executable
    "EXE",
    # flake8-future-annotations
    "FA",
    # flake8-boolean-trap
    "FBT",
    # flake8-import-conventions
    "ICN",
    # flake8-no-pep420
    "INP",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-naming
    "N",
    # pygrep-hooks
    "PGH",
    # flake8-pie
    "PIE",
    # pylint conventions
    "PLC",
    # pylint errors
    "PLE",
    # pylint refactor
    "PLR",
    # pylint warnings
    "PLW",
    # flake8-pytest-style
    "PT",
    # flake8-use-pathlib
    "PTH",
    # flake8-pyi
    "PYI",
    # flake8-return
    "RET",
    # flake8-raise
    "RSE",
    # ruff-specific rules
    "RUF",
    # flake8-self
    "SLF",
    # flake8-slots
    "SLOT",
    # flake8-type-checking
    "TCH",
    # flake8-tidy-imports
    "TID",
    # tryceratops
    "TRY",
    # flake8-2020
    "YTT",
    # mccabe
    "C90"
]

# Ignore specific rules that conflict with our style
ignore = [
    "E501",  # Line too long (handled by formatter)
    "ISC001", # Conflicts with formatter
    "PLR0913", # Too many arguments
]

# Configure import sorting
[tool.ruff.lint.isort]
known-first-party = ["hother.streamblocks"]
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

# Format settings
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101",    # Use of assert
    "ANN",     # Missing type annotations
    "PLR2004", # Magic value comparison
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "RUF012",  # Mutable class attributes
    "PLW2901", # Loop variable overwritten
]
"examples/**/*" = [
    "C901",    # Too complex
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic value comparison
    "INP001",  # Implicit namespace package
    "S311",    # Pseudo-random generator (acceptable in examples)
    "S307",    # Use of eval (acceptable in demo code)
    "PTH100",  # os.path.abspath (acceptable in examples)
    "PTH120",  # os.path.dirname (acceptable in examples)
    "PTH123",  # os.path usage (acceptable in examples)
    "EXE001",  # Shebang without executable
    "ANN001",  # Missing function argument annotations
    "ANN202",  # Missing return annotations
    "ANN401",  # Any type allowed in examples
    "PLC0415", # Import not at top-level (acceptable in examples)
    "E741",    # Ambiguous variable names (acceptable in examples)
    "DTZ005",  # datetime without tz (acceptable in examples)
    "RUF001",  # Ambiguous unicode (emojis acceptable in examples)
    "F401",    # Unused imports (acceptable in examples)
    "B904",    # raise without from (acceptable in examples)
    "B007",    # Loop variable not used (acceptable in examples)
    "SIM102",  # Nested if (acceptable in examples)
    "FBT001",  # Boolean positional argument (acceptable in examples)
    "FBT002",  # Boolean default argument (acceptable in examples)
]
"sandbox/**/*" = [
    "C901",    # Too complex
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "INP001",  # Implicit namespace package
    "RUF002",  # Docstring formatting
    "EXE001",  # Shebang without executable
]
"tools/**/*" = [
    "S602",    # shell=True (acceptable in internal tools)
    "S110",    # try-except-pass (acceptable in internal tools)
    "INP001",  # Implicit namespace package
    "PLC0415", # Import not at top-level (acceptable in tools)
]
"src/hother/streamblocks/core/processor.py" = [
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "C901",    # Too complex
]
"src/hother/streamblocks/core/models.py" = [
    "UP046",   # Type annotation can be modernized
]
"src/hother/streamblocks/integrations/**/*" = [
    "ANN401",  # Any types needed for pydantic_ai integration
    "FBT001",  # Boolean positional arguments for optional features
    "FBT002",  # Boolean default arguments for optional features
]
"src/hother/streamblocks/content/**/*" = [
    "ANN401",  # Any types needed for generic content parsing
]

# Complexity settings
[tool.ruff.lint.mccabe]
max-complexity = 10

# Type checking with basedpyright (updated for Python 3.13)
[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/migrations", ".venv", "tests"]
ignore = [
    "src/hother/streamblocks/content/interactive.py",
    "src/hother/streamblocks/content/memory.py",
    "src/hother/streamblocks/content/toolcall.py",
    "src/hother/streamblocks/content/visualization.py",
    "src/hother/streamblocks/integrations/pydantic_ai/agent.py",
]

pythonVersion = "3.13"
venvPath = ".venv"

typeCheckingMode = "strict"
reportPossiblyUnboundVariable = true
reportMissingTypeStubs = true
reportUnknownParameterType = "error"
reportUnknownMemberType = "error"
reportPrivateUsage = "error"
reportConstantRedefinition = "error"
reportImplicitStringConcatenation = "error"
reportCallInDefaultInitializer = "error"
reportPropertyTypeMismatch = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryTypeIgnoreComment = "error"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--cov=hother.streamblocks",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--strict-markers",
    "--strict-config"
]

# Coverage configuration
[tool.coverage.run]
source_pkgs = ["hother.streamblocks"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
